# rupa

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md
crates/rupa-assets/: Cargo.toml
crates/rupa-assets/src/: cache.rs  lib.rs  loader.rs  manager.rs
crates/rupa-auth/: Cargo.toml
crates/rupa-auth/src/: identity.rs  lib.rs  rbac.rs  session.rs  teams.rs  utils.rs
crates/rupa-broadcast/: Cargo.toml
crates/rupa-broadcast/src/: bus.rs  channel.rs  lib.rs
crates/rupa-cli/: Cargo.toml  README.md
crates/rupa-cli/src/: bundler.rs  commands.rs  config.rs  lib.rs  main.rs  templates.rs  ui.rs
crates/rupa-cli/src/console/: layout.rs  mod.rs  progress.rs
crates/rupa-cli/src/templates/: cargo.rs  component.rs  entry.rs  mod.rs
crates/rupa-cli/stubs/: app_component.stub  cargo.stub  cargo_base.stub  main_fullstack.stub  main_hybrid.stub  main_mobile.stub  main_native.stub  main_plugin.stub  main_pure.stub  main_server.stub  main_terminal.stub  main_web.stub
crates/rupa-client/: Cargo.toml
crates/rupa-client/src/: lib.rs
crates/rupa-console/: Cargo.toml  README.md
crates/rupa-console/src/: lib.rs  runner.rs
crates/rupa-console/src/ui/: layout.rs  mod.rs  progress.rs  text.rs
crates/rupa-core/: Cargo.toml  README.md
crates/rupa-core/src/: a11y.rs  accessibility.rs  action.rs  attributes.rs  background.rs  border.rs  color.rs  command.rs  component.rs  effects.rs  events.rs  filters.rs  grid.rs  interactivity.rs  layout.rs  lib.rs  motion.rs  renderer.rs  scale.rs  scene.rs  sizing.rs  spacing.rs  style_data.rs  svg.rs  transform.rs  types.rs  typography.rs  vector.rs  view.rs
crates/rupa-core/src/events/: dispatcher.rs  interaction.rs  mod.rs
crates/rupa-core/src/reconciler/: diff.rs  mod.rs  patch.rs
crates/rupa-core/src/scene/: layout.rs  mod.rs
crates/rupa-core/tests/: component.rs
crates/rupa-desktop/: Cargo.toml
crates/rupa-desktop/src/: lib.rs  runner.rs
crates/rupa-desktop/src/renderer/: batcher.rs  renderer.rs  text_renderer.rs
crates/rupa-engine/: Cargo.toml  README.md
crates/rupa-engine/src/: element_tree.rs  lib.rs  plugin.rs  renderer.rs
crates/rupa-engine/src/platform/: app.rs  context.rs  dispatcher.rs  events.rs  mod.rs  runner.rs
crates/rupa-engine/src/platform/desktop/: infra.rs  input.rs  mod.rs  runner.rs
crates/rupa-engine/src/platform/mobile/: infra.rs  runner.rs
crates/rupa-engine/src/platform/terminal/: runner.rs
crates/rupa-engine/src/platform/web/: infra.rs  mod.rs  runner.rs
crates/rupa-engine/src/renderer/: core.rs  mod.rs
crates/rupa-engine/src/renderer/gui/: batcher.rs  renderer.rs  text_renderer.rs  texture.rs
crates/rupa-engine/src/renderer/tui/: mod.rs  renderer.rs
crates/rupa-engine/src/scene/: core.rs  layout.rs  mod.rs  node.rs
crates/rupa-engine/src/shaders/: shader.wgsl
crates/rupa-forms/: Cargo.toml
crates/rupa-forms/src/: form.rs  form_state.rs  lib.rs  rules.rs  schema.rs  validation.rs
crates/rupa-fullstack/: Cargo.toml
crates/rupa-fullstack/src/: lib.rs
crates/rupa-i18n/: Cargo.toml
crates/rupa-i18n/src/: dictionary.rs  lib.rs  locale.rs  provider.rs
crates/rupa-md/: Cargo.toml
crates/rupa-md/src/: lib.rs
crates/rupa-mobile/: Cargo.toml
crates/rupa-mobile-core/: Cargo.toml
crates/rupa-mobile-core/src/: lib.rs
crates/rupa-mobile/src/: infra.rs  lib.rs
crates/rupa-motion/: Cargo.toml  README.md
crates/rupa-motion/src/: easing.rs  lib.rs  spring.rs  timeline.rs  transition.rs
crates/rupa-net/: Cargo.toml
crates/rupa-net/src/: client.rs  lib.rs  resource.rs
crates/rupa-queue/: Cargo.toml
crates/rupa-queue/src/: lib.rs  queue.rs  task.rs
crates/rupa-router/: Cargo.toml
crates/rupa-router/src/: history.rs  lib.rs  route.rs  router.rs
crates/rupa-server/: Cargo.toml
crates/rupa-server-core/: Cargo.toml
crates/rupa-server-core/src/: lib.rs
crates/rupa-server/src/: lib.rs
crates/rupa-signals/: Cargo.toml  README.md
crates/rupa-signals/src/: effect.rs  lib.rs  memo.rs  runtime.rs  signal.rs
crates/rupa-support/: Cargo.toml
crates/rupa-support/src/: error.rs  id.rs  lib.rs
crates/rupa-terminal/: Cargo.toml
crates/rupa-terminal/src/: lib.rs  runner.rs
crates/rupa-terminal/src/runner/: events.rs  layout.rs  paint.rs
crates/rupa-test/: Cargo.toml
crates/rupa-test/src/: headless.rs  interaction.rs  lib.rs  snapshot.rs
crates/rupa-tui/: Cargo.toml  README.md
crates/rupa-tui/src/: lib.rs  runner.rs
crates/rupa-tui/src/components/: list.rs  mod.rs  panel.rs
crates/rupa-ui/: Cargo.toml  README.md
crates/rupa-ui/src/: body.rs  lib.rs  prelude.rs
crates/rupa-ui/src/elements/: accordion.rs  brand.rs  button.rs  card.rs  children.rs  content.rs  control_flow.rs  feedback.rs  for_each.rs  forms.rs  mod.rs  navigation.rs  overlay.rs  routing.rs  show.rs  svg.rs  table.rs  text.rs  theme_switcher.rs  viewport.rs
crates/rupa-ui/src/elements/feedback/: alert.rs  badge.rs  mod.rs  progress.rs  skeleton.rs  spinner.rs
crates/rupa-ui/src/elements/forms/: checkbox.rs  input.rs  label.rs  mod.rs  radio.rs  select.rs  switch.rs
crates/rupa-ui/src/elements/layout/: col.rs  container.rs  div.rs  divider.rs  fieldset.rs  grid.rs  hstack.rs  mod.rs  row.rs  section.rs  spacer.rs  vstack.rs
crates/rupa-ui/src/elements/navigation/: breadcrumb.rs  mod.rs  navbar.rs  sidebar.rs  tabs.rs
crates/rupa-ui/src/elements/overlay/: mod.rs  modal.rs  tooltip.rs
crates/rupa-ui/src/layouts/: col.rs  fieldset.rs  mod.rs  overlay.rs  row.rs  spacer.rs
crates/rupa-ui/src/primitives/: div.rs  flex.rs  grid.rs  mod.rs  overlay.rs
crates/rupa-ui/src/style/: mod.rs  theme.rs
crates/rupa-vnode/: Cargo.toml  README.md
crates/rupa-vnode/src/: lib.rs
crates/rupa-vnode/src/style/: accessibility.rs  attributes.rs  background.rs  border.rs  color.rs  effects.rs  events.rs  flex.rs  grid.rs  handlers.rs  layout.rs  mod.rs  motion.rs  sizing.rs  spacing.rs  style.rs  svg.rs  theme.rs  types.rs  typography.rs
crates/rupa-web-core/: Cargo.toml
crates/rupa-web-core/src/: lib.rs
docs/: README.md  (+26 more)
(+682 files in other folders)
