[package]
name = "rupa-assets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-core.workspace = true
rupa-signals.workspace = true
rupa-support.workspace = true
async-trait.workspace = true
image.workspace = true
log.workspace = true
thiserror.workspace = true
