[package]
name = "rupa-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-signals.workspace = true
rupa-store.workspace = true
rupa-base.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
log.workspace = true
rand = "0.8"
md5 = "0.7"
