[package]
name = "rupa-broadcast"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-signals.workspace = true
rupa-base.workspace = true
serde.workspace = true
async-trait.workspace = true
log.workspace = true
once_cell = "1.18"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
