[package]
name = "rupa-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aesthetic command-line tooling and project initializer for the Rupa Framework."
repository.workspace = true
readme = "README.md"
keywords = ["rupa", "cli", "scaffolding", "wizard"]
categories = ["command-line-interface", "development-tools"]

[[bin]]
name = "rupa"
path = "src/main.rs"

[dependencies]
rupa-base.workspace = true
rupa-terminal.workspace = true
rupa-engine.workspace = true
rupa-ui.workspace = true
rupa-core.workspace = true
rupa-signals.workspace = true
rupa-md.workspace = true
rupa-server.workspace = true
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "process"] }
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
log.workspace = true
taffy.workspace = true
