[package]
name = "rupa-console"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Low-level terminal rendering primitives for the Rupa Framework. Atom Tier."
repository.workspace = true
readme = "README.md"

[dependencies]
rupa-core.workspace = true
rupa-signals.workspace = true
rupa-base.workspace = true
crossterm.workspace = true
log.workspace = true
