[package]
name = "rupa-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-support.workspace = true
rupa-signals.workspace = true
rupa-styling.workspace = true
rupa-vnode.workspace = true
log.workspace = true
thiserror.workspace = true
serde.workspace = true
taffy.workspace = true
