[package]
name = "rupa-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The core reconciliation and orchestration engine for the Rupa Framework."
repository.workspace = true
readme = "README.md"
keywords = ["rupa", "core", "reconciliation", "ui"]
categories = ["gui"]

[dependencies]
rupa-support.workspace = true
rupa-signals.workspace = true
rupa-vnode.workspace = true
log.workspace = true
thiserror.workspace = true
serde.workspace = true
taffy.workspace = true
