[package]
name = "rupa-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-core.workspace = true
rupa-ui.workspace = true
rupa-engine = { workspace = true, features = ["gui", "desktop"] }
rupa-assets.workspace = true
rupa-motion.workspace = true
rupa-signals.workspace = true
