[package]
name = "rupa-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-core.workspace = true
rupa-ui.workspace = true
rupa-engine.workspace = true
rupa-assets.workspace = true
rupa-motion.workspace = true
rupa-signals.workspace = true
rupa-support.workspace = true
wgpu.workspace = true
winit.workspace = true
glyphon.workspace = true
bytemuck.workspace = true
image.workspace = true
pollster.workspace = true
raw-window-handle.workspace = true
log.workspace = true
