[package]
name = "rupa-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-core.workspace = true
rupa-ui.workspace = true
rupa-vnode.workspace = true
log.workspace = true
taffy.workspace = true
futures.workspace = true
raw-window-handle.workspace = true
once_cell = "1.18"
pollster.workspace = true

# Rendering backends
winit = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
glyphon = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
image = { workspace = true, optional = true }

[features]
default = ["gui", "desktop"]
gui = ["wgpu", "winit", "glyphon", "bytemuck", "image"]
tui = ["crossterm"]
desktop = ["winit"]
terminal = ["tui"]
mobile = ["wgpu", "winit"]
