[package]
name = "rupa-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The platform-agnostic Kernel for the Rupa Framework."
repository.workspace = true
readme = "README.md"

[dependencies]
rupa-core.workspace = true
rupa-signals.workspace = true
rupa-vnode.workspace = true
rupa-support.workspace = true
log.workspace = true
taffy.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }

[features]
default = []
# Features are now handled by specialized showrooms (desktop, tui, web)
