[package]
name = "rupa-forms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-signals.workspace = true
rupa-base.workspace = true
rupa-vnode.workspace = true
rupa-macros.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
