[package]
name = "rupa-mobile-core-facade"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-core.workspace = true
rupa-ui.workspace = true
rupa-engine = { workspace = true, features = ["gui", "mobile"] }
rupa-mobile-core.workspace = true
rupa-assets.workspace = true
rupa-signals.workspace = true
