[package]
name = "rupa-mobile"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The Native Mobile showroom for the Rupa Framework."
repository.workspace = true
readme = "README.md"
keywords = ["rupa", "mobile", "android", "ios"]
categories = ["gui"]

[dependencies]
rupa-core.workspace = true
rupa-engine.workspace = true
log.workspace = true
winit.workspace = true
serde.workspace = true

# Android specific
[target.'cfg(target_os = "android")'.dependencies]
ndk.workspace = true
ndk-context.workspace = true
jni.workspace = true
