[package]
name = "rupa-motion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A high-performance physics-based motion and animation engine for the Rupa Framework."
repository.workspace = true
readme = "README.md"
keywords = ["rupa", "animation", "motion", "spring", "physics"]
categories = ["gui", "multimedia"]

[dependencies]
rupa-signals.workspace = true
rupa-vnode.workspace = true
rupa-base.workspace = true
serde.workspace = true
lazy_static = "1.5.0"
