[package]
name = "rupa-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-core.workspace = true
rupa-signals.workspace = true
rupa-support.workspace = true
serde.workspace = true
log.workspace = true
thiserror.workspace = true
futures.workspace = true
