[package]
name = "rupa-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-core.workspace = true
rupa-signals.workspace = true
rupa-context.workspace = true
rupa-vnode.workspace = true
serde.workspace = true
log.workspace = true
