[package]
name = "rupa-server-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-core.workspace = true
rupa-ui.workspace = true
rupa-vnode.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
log.workspace = true
