[package]
name = "rupa-support"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Foundation utilities, common types, and error handling for the Rupa Framework."
repository.workspace = true
readme = "README.md"
keywords = ["rupa", "framework", "utils", "ui"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror.workspace = true
log.workspace = true
