[package]
name = "rupa-terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The flagship Terminal showroom and facade for crafting aesthetic Rupa CLI applications."
repository.workspace = true
readme = "README.md"

[dependencies]
rupa-core.workspace = true
rupa-engine.workspace = true
rupa-console.workspace = true
rupa-tui.workspace = true
rupa-ui.workspace = true
rupa-signals.workspace = true
rupa-base.workspace = true
