[package]
name = "rupa-terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aesthetic Showroom for Terminal applications. Facade of the Rupa Framework."
repository.workspace = true

[dependencies]
rupa-engine.workspace = true
rupa-core.workspace = true
rupa-console.workspace = true
rupa-tui.workspace = true
rupa-signals.workspace = true
rupa-base.workspace = true
rupa-ui.workspace = true
rupa-motion.workspace = true
crossterm.workspace = true
taffy.workspace = true
unicode-width.workspace = true
