[package]
name = "rupa-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-signals.workspace = true
rupa-vnode.workspace = true
rupa-context.workspace = true
rupa-core.workspace = true
serde.workspace = true
serde_json.workspace = true
