[package]
name = "rupa-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal UI components and Showroom for the Rupa Framework."
repository.workspace = true
readme = "README.md"

[dependencies]
rupa-core.workspace = true
rupa-console.workspace = true
rupa-signals.workspace = true
rupa-vnode.workspace = true
rupa-base.workspace = true
rupa-ui.workspace = true
taffy.workspace = true
unicode-width = "0.1"
