[package]
name = "rupa-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-core.workspace = true
rupa-signals.workspace = true
rupa-styling.workspace = true
log.workspace = true
taffy.workspace = true
serde.workspace = true
once_cell = "1.18"
