[package]
name = "rupa-vnode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rupa-signals.workspace = true
rupa-support.workspace = true
serde.workspace = true
serde_json.workspace = true
taffy.workspace = true
once_cell.workspace = true
