[package]
name = "rupa-vnode"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "The universal DNA of Rupa Framework: Platform-agnostic Virtual UI Nodes and Style models."
repository.workspace = true
readme = "README.md"
keywords = ["rupa", "vdom", "vnode", "ui", "dna"]
categories = ["gui", "web-programming"]

[dependencies]
rupa-signals.workspace = true
rupa-base.workspace = true
serde.workspace = true
serde_json.workspace = true
taffy.workspace = true
once_cell.workspace = true
