[package]
name = "rupa-web-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rupa-core.workspace = true
rupa-ui.workspace = true
rupa-signals.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
log.workspace = true
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
workspace = true
features = [
    "HtmlElement",
    "Window",
    "Document",
    "Node",
    "Element",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration"
]
